# Kydy_AI4BH

./: .gitignore  API_ENDPOINTS.md  FRONTEND_BACKEND_SETUP.md  FRONTEND_DATABASE_GUIDE.md  FRONTEND_ENDPOINTS_README.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  SETUP_GUIDE.md  a.html  backend.py  design.md  main.py  pyproject.toml  requirements.md  requirements_minimal.txt  test_database_setup.py  test_frontend_database.py
.kiro/settings/: README.md
.kiro/specs/: README.md
.kiro/steering/: README.md  project-info.md
Frontend/project/: App.tsx  index.html  package.json  styles.css  tailwind.config.cjs
backend/: .env.example  README.md  config.py  main.py  models.py  requirements.txt  run.py
database/: complete_database.py
database/app/Testing/: create_s3.py  create_table.py  test_admin.py  test_course.py  test_doubt.py  test_feature.py  test_learning.py  test_login.py  test_media.py  test_monetization.py  test_notebook.py  test_session.py  (+1 more)
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  Dashboard.tsx  Lessons.tsx  Notes.tsx  Visualizer.tsx
kydy/: index.html  package-lock.json  package.json  tsconfig.json
kydy/src/: App.tsx  Courses.tsx  Dashboard.tsx  Lessons.tsx  Notes.tsx  Visualizer.tsx  svg.d.ts
kydy_agent/: .bedrock_agentcore.yaml  requirements.txt
kydy_agent/agent/: engine.py  main.py
kydy_engine/: circuit-asset-library.html  circuit_renderer.py  ml_course.json  sample2.json  sampple.json
svg_engine/: component_names.txt  kabil.json  photosynthesis.json  svg_engine.py
(+23 files in other folders)
