[project]
name = "kydy-note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awscli>=1.44.47",
    "boto3>=1.42.56",
    "botocore>=1.42.60",
    "crewai[google-genai,tools]>=1.9.3",
    "fastapi>=0.133.0",
    "litellm>=1.75.3",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.10",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
